--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -39,4 +39,17 @@
 
      <string name="silent_screenshot_title">Silent Screenshot</string>
      <string name="silent_screenshot_summary">Be silent when taking a screenshot</string>
+
+     <!-- Network -->
+     <string name="wifi_settings_title">Network Extra</string>
+     <string name="wifi_settings_summary">Extra settings for wifi/network</string>
+
+     <string name="wifi_actions_title">Wifi Actions</string>
+     <string name="wifi_actions_summary">Auto actions when connecting to wifi</string>
+
+     <string name="wifi_actions_2g_title">Switch to 2G</string>
+     <string name="wifi_actions_2g_summary">Switch to 2G when wifi connects</string>
+
+     <string name="wifi_actions_2g_title">Disable mobile data</string>
+     <string name="wifi_actions_2g_summary">Disable mobile data when wifi connects</string>
 </resources>
